mainTemplate.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "namePrefix": {
      "type": "string",
      "metadata": {
        "description": "String used as a base for naming resources (6 alphanumeric characters or less).  A unique hash is prepended to the string for some resources, while resource-specific information is appended."
      },
      "maxLength": 6
    },
    "authType": {
      "type": "string",
      "defaultValue": "sshPublicKey",
      "metadata": {
        "description": "Authorization type for SSH access to VMs"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "gethadmin",
      "metadata": {
        "description": "Administrator username of each deployed VM (alphanumeric characters only)"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "defaultValue": "",
      "metadata": {
        "description": "Administrator password for each deployed VM"
      }
    },
    "adminSSHKey": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "SSH RSA public key file as a string"
      }
    },
    "ethereumAccountPsswd": {
      "type": "securestring",
      "defaultValue": "",
      "metadata": {
        "description": "Password used to secure the default Ethereum account that will be generated"
      }
    },
    "ethereumAccountPassphrase": {
      "type": "securestring",
      "defaultValue": "",
      "metadata": {
        "description": "Password used to generate the private key associated with the default Ethereum account that is generated.  Consider a password with sufficient randomness to ensure a strong private key"
      }
    },
    "ethereumNetworkID": {
      "type": "int",
      "defaultValue": 72,
      "metadata": {
        "description": "Private Ethereum network ID to which to connect (max 9 digit number)"
      },
      "maxValue": 2147483647
    },
    "numConsortiumMembers": {
      "type": "int",
      "defaultValue": 2,
      "metadata": {
        "description": "Number of members within the network.  Each member's nodes live in their own subnet."
      },
      "minValue": 2,
      "maxValue": 12
    },
    "numMiningNodesPerMember": {
      "type": "int",
      "defaultValue": 1,
      "metadata": {
        "description": "Number of mining nodes to create for each consortium member."
      },
      "minValue": 1,
      "maxValue": 15
    },
    "mnNodeVMSize": {
      "type": "string",
      "defaultValue": "Standard_A1",
      "allowedValues": [],
      "metadata": {
        "description": "Size of the virtual machine used for mining nodes"
      }
    },
    "mnStorageAccountType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ],
      "metadata": {
        "description": "Type of storage accounts to create"
      }
    },
    "numTXNodes": {
      "type": "int",
      "defaultValue": 1,
      "metadata": {
        "description": "Number of load balanced transaction nodes"
      },
      "minValue": 1,
      "maxValue": 5
    },
    "txNodeVMSize": {
      "type": "string",
      "defaultValue": "Standard_A1",
      "allowedValues": [],
      "metadata": {
        "description": "Size of the virtual machine for transaction nodes"
      }
    },
    "txStorageAccountType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_GRS",
        "Standard_RAGRS",
        "Premium_LRS"
      ],
      "metadata": {
        "description": "Type of storage accounts to create"
      }
    },
    "location": {
      "type": "string"
    },
    "baseUrl": {
      "type": "string",
      "metadata": {
        "description": "The base URL for dependent assets",
        "artifactsBaseUrl": ""
      },
      "defaultValue": "https://gallery.azure.com/artifact/20151001/microsoft-azure-blockchain.azure-blockchain-serviceethereum-consortium-blockchain.1.0.15/Artifacts"
    },
    "genesisBlock": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Genesis Block for the network"
      }
    }
  },
  "variables": {
    "namingInfix": "[toLower(substring(concat(parameters('namePrefix'), uniqueString(resourceGroup().id)), 0, 12))]",
    "availabilitySetName": "[concat(variables('namingInfix'), 'AvSet')]",
    "httpPort": 80,
    "adminSitePort": 3000,
    "sshPort": 22,
    "sshNATFrontEndStartingPort": 3000,
    "gethRPCPort": 8545,
    "gethIPCPort": 30303,
    "loadBalancerName": "[concat(variables('namingInfix'), '-LB')]",
    "loadBalancerBackendAddressPoolName": "LoadBalancerBackend1",
    "loadBalancerInboundNatRuleNamePrefix": "SSH-VM",
    "numMNNodes": "[mul(parameters('numConsortiumMembers'), parameters('numMiningNodesPerMember'))]",
    "maxVMsPerStorageAcct": 20,
    "mnStorageAcctCount": "[add(div(variables('numMNNodes'), variables('maxVMsPerStorageAcct')), 1)]",
    "mnStorageAcctNames": [
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn0')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn1')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn2')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn3')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn4')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn5')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn6')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn7')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn8')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'mn9')]"
    ],
    "mnVMNamePrefix": "[concat(variables('namingInfix'), '-mn')]",
    "mnNICPrefix": "nic-mn",
    "txStorageAcctName": "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'tx')]",
    "txVMNamePrefix": "[concat(variables('namingInfix'), '-tx')]",
    "txSubnetName": "[concat(uniqueString(concat(resourceGroup().id, concat(variables('namingInfix'), 'subnet')), 'tx'))]",
    "txSubnetPrefix": "10.0.0.0/24",
    "txSubnetRef": "[concat(variables('vnetID'),'/subnets/', variables('txSubnetName'))]",
    "txNIPrefix": "nic-tx",
    "virtualNetworkName": "[concat(variables('namingInfix'), 'vnet')]",
    "txNsgName": "[concat(variables('namingInfix'), 'TXNsg')]",
    "mnNsgName": "[concat(variables('namingInfix'), 'MNNsg')]",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
    "addressPrefix": "10.0.0.0/20",
    "mnSubnetNameArray": [
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn0')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn1')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn2')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn3')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn4')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn5')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn6')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn7')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn8')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn9')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn10')]",
      "[concat(uniqueString(resourceGroup().id, variables('namingInfix')), 'snet-mn11')]"
    ],
    "mnSubnetPrefixArray": [
      "10.0.1.0/24",
      "10.0.2.0/24",
      "10.0.3.0/24",
      "10.0.4.0/24",
      "10.0.5.0/24",
      "10.0.6.0/24",
      "10.0.7.0/24",
      "10.0.8.0/24",
      "10.0.9.0/24",
      "10.0.10.0/24",
      "10.0.11.0/24",
      "10.0.12.0/24"
    ],
    "mnSubnetRefArray": [
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[0])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[1])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[2])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[3])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[4])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[5])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[6])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[7])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[8])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[9])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[10])]",
      "[concat(variables('vnetID'),'/subnets/', variables('mnSubnetNameArray')[11])]"
    ],
    "numSubnets": "[add(parameters('numConsortiumMembers'), 1)]",
    "subnetPropertiesArray": [
      {
        "name": "[variables('txSubnetName')]",
        "properties": {
          "addressPrefix": "[variables('txSubnetPrefix')]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('txNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[0]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[0]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[1]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[1]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[2]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[2]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[3]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[3]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[4]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[4]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[5]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[5]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[6]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[6]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[7]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[7]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[8]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[8]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[9]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[9]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[10]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[10]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      },
      {
        "name": "[variables('mnSubnetNameArray')[11]]",
        "properties": {
          "addressPrefix": "[variables('mnSubnetPrefixArray')[11]]",
          "networkSecurityGroup": {
            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('mnNsgName'))]"
          }
        }
      }
    ],
    "ubuntuImage": {
      "publisher": "Canonical",
      "offer": "UbuntuServer",
      "sku": "16.04.0-LTS",
      "version": "latest"
    }
  },
  "resources": [
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('availabilitySetName')]",
      "location": "[parameters('location')]",
      "properties": {}
    },
    {
      "apiVersion": "2015-01-01",
      "name": "loadBalancerLinkedTemplate",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('baseUrl'), '/nested/loadBalancer.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "loadBalancerName": {
            "value": "[variables('loadBalancerName')]"
          },
          "dnsHostName": {
            "value": "[variables('namingInfix')]"
          },
          "loadBalancerBackendAddressPoolName": {
            "value": "[variables('loadBalancerBackendAddressPoolName')]"
          },
          "loadBalancerInboundNatRuleNamePrefix": {
            "value": "[variables('loadBalancerInboundNatRuleNamePrefix')]"
          },
          "frontendPort1": {
            "value": "[variables('httpPort')]"
          },
          "backendPort1": {
            "value": "[variables('adminSitePort')]"
          },
          "frontendPort2": {
            "value": "[variables('gethRPCPort')]"
          },
          "backendPort2": {
            "value": "[variables('gethRPCPort')]"
          },
          "numInboundNATRules": {
            "value": "[parameters('numTXNodes')]"
          },
          "inboundNATRuleFrontendStartingPort": {
            "value": "[variables('sshNATFrontEndStartingPort')]"
          },
          "inboundNATRuleBackendPort": {
            "value": "[variables('sshPort')]"
          },
          "location": {
            "value": "[parameters('location')]"
          }
        }
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('mnNsgName')]",
      "location": "[parameters('location')]",
      "tags": {
        "displayName": "NSG - Mining (MN)"
      },
      "properties": {
        "securityRules": [
          {
            "name": "block-bootnodes",
            "properties": {
              "description": "Block Internet Bootnodes",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "30303",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 100,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('txNsgName')]",
      "location": "[parameters('location')]",
      "tags": {
        "displayName": "NSG - Transaction (TX)"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-geth-rpc",
            "properties": {
              "description": "Allow geth RPC",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "8545",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-etheradmin",
            "properties": {
              "description": "Allow etheradmin web service",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "block-bootnodes",
            "properties": {
              "description": "Block Internet Bootnodes",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "30303",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 100,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('txNsgName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('mnNsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": "[take(variables('subnetPropertiesArray'), variables('numSubnets'))]"
      }
    },
    {
      "apiVersion": "2015-01-01",
      "name": "txVMLinkedTemplate",
      "type": "Microsoft.Resources/deployments",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Compute/availabilitySets/', variables('availabilitySetName'))]",
        "loadBalancerLinkedTemplate"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('baseUrl'), '/nested/txVMAuth', '-', parameters('authType'), '.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "loadBalancerName": {
            "value": "[variables('loadBalancerName')]"
          },
          "loadBalancerBackendAddressPoolName": {
            "value": "[variables('loadBalancerBackendAddressPoolName')]"
          },
          "loadBalancerInboundNatRuleNamePrefix": {
            "value": "[variables('loadBalancerInboundNatRuleNamePrefix')]"
          },
          "txSubnetRef": {
            "value": "[variables('txSubnetRef')]"
          },
          "txVMNamePrefix": {
            "value": "[variables('txVMNamePrefix')]"
          },
          "numTXNodes": {
            "value": "[parameters('numTXNodes')]"
          },
          "txStorageAcctName": {
            "value": "[variables('txStorageAcctName')]"
          },
          "txNIPrefix": {
            "value": "[variables('txNIPrefix')]"
          },
          "storageAccountType": {
            "value": "[parameters('txStorageAccountType')]"
          },
          "availabilitySetName": {
            "value": "[variables('availabilitySetName')]"
          },
          "txNodeVMSize": {
            "value": "[parameters('txNodeVMSize')]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "adminSSHKey": {
            "value": "[parameters('adminSSHKey')]"
          },
          "ubuntuImage": {
            "value": "[variables('ubuntuImage')]"
          },
          "namingInfix": {
            "value": "[variables('namingInfix')]"
          },
          "location": {
            "value": "[parameters('location')]"
          }
        }
      }
    },
    {
      "apiVersion": "2015-01-01",
      "name": "mnVMLinkedTemplate",
      "type": "Microsoft.Resources/deployments",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('baseUrl'), '/nested/mnVMAuth', '-', parameters('authType'), '.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "mnVMNamePrefix": {
            "value": "[variables('mnVMNamePrefix')]"
          },
          "numMNNodes": {
            "value": "[variables('numMNNodes')]"
          },
          "mnNICPrefix": {
            "value": "[variables('mnNICPrefix')]"
          },
          "mnStorageAcctNames": {
            "value": "[variables('mnStorageAcctNames')]"
          },
          "mnStorageAcctCount": {
            "value": "[variables('mnStorageAcctCount')]"
          },
          "mnSubnetRefArray": {
            "value": "[variables('mnSubnetRefArray')]"
          },
          "numConsortiumMembers": {
            "value": "[parameters('numConsortiumMembers')]"
          },
          "storageAccountType": {
            "value": "[parameters('mnStorageAccountType')]"
          },
          "mnNodeVMSize": {
            "value": "[parameters('mnNodeVMSize')]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "adminSSHKey": {
            "value": "[parameters('adminSSHKey')]"
          },
          "ubuntuImage": {
            "value": "[variables('ubuntuImage')]"
          },
          "namingInfix": {
            "value": "[variables('namingInfix')]"
          },
          "location": {
            "value": "[parameters('location')]"
          }
        }
      }
    },
    {
      "apiVersion": "2015-01-01",
      "name": "vmExtensionLinkedTemplate",
      "type": "Microsoft.Resources/deployments",
      "dependsOn": [
        "txVMLinkedTemplate",
        "mnVMLinkedTemplate"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(parameters('baseUrl'), '/nested/vmExtension.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "numBootNodes": {
            "value": "[parameters('numConsortiumMembers')]"
          },
          "txVMNamePrefix": {
            "value": "[variables('txVMNamePrefix')]"
          },
          "numTXNodes": {
            "value": "[parameters('numTXNodes')]"
          },
          "mnVMNamePrefix": {
            "value": "[variables('mnVMNamePrefix')]"
          },
          "numMNNodes": {
            "value": "[variables('numMNNodes')]"
          },
          "artifactsLocationURL": {
            "value": "[parameters('baseUrl')]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "ethereumAccountPsswd": {
            "value": "[parameters('ethereumAccountPsswd')]"
          },
          "ethereumAccountPassphrase": {
            "value": "[parameters('ethereumAccountPassphrase')]"
          },
          "ethereumNetworkID": {
            "value": "[parameters('ethereumNetworkID')]"
          },
          "gethIPCPort": {
            "value": "[variables('gethIPCPort')]"
          },
          "adminSitePort": {
            "value": "[variables('adminSitePort')]"
          },
          "location": {
            "value": "[parameters('location')]"
          },
          "genesisBlock": {
            "value": "[parameters('genesisBlock')]"
          }
        }
      }
    }
  ],
  "outputs": {
    "admin-site": {
      "type": "string",
      "value": "[concat('http://', reference('loadBalancerLinkedTemplate').outputs.fqdn.value)]"
    },
    "ethereum-rpc-endpoint": {
      "type": "string",
      "value": "[concat('http://', reference('loadBalancerLinkedTemplate').outputs.fqdn.value, ':', variables('gethRPCPort'))]"
    },
    "ssh-to-first-tx-node": {
      "type": "string",
      "value": "[concat('ssh -p ', variables('sshNATFrontEndStartingPort'), ' ', parameters('adminUsername'), '@', reference('loadBalancerLinkedTemplate').outputs.fqdn.value)]"
    }
  }
}
